# foldup

./: .foldignore  .gitignore  README.md  TODO.md  Taskfile.yml  codebase.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
src/: cli.py  core.py  defaults.py  utils.py
src/example_package_n4than/: cli.py  core.py  defaults.py  utils.py
src/foldup/: cli.py  core.py  defaults.py  utils.py
